--- a/.github/workflows/deploy-backend-infratstructure.yml
+++ b/.github/workflows/deploy-backend-infratstructure.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   bash-example:
     runs-on: ubuntu-20.04
+    environment: Development
     steps:
       - name: Print
         run: |
