--- a/.github/workflows/deploy-backend-infratstructure.yml
+++ b/.github/workflows/deploy-backend-infratstructure.yml
@@ -11,4 +11,5 @@ jobs:
     steps:
       - name: Print
         run: |
-          echo "the development environment: "
+          echo "CDK_DEFAULT_REGION  : ${{vars.CDK_DEFAULT_REGION}}"
+          echo "COMPANY  : ${{vars.COMPANY}}"
