--- a/.github/workflows/deploy-backend-infratstructure.yml
+++ b/.github/workflows/deploy-backend-infratstructure.yml
@@ -13,6 +13,4 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Print Variables
-        run: echo "$DEVELOPMENT_ENVIRONMENT"
-      - name: Install AWS CLI
-        run: echo "$DEVELOPMENT_ENVIRONMENT"
+        run: . ./scripts/initialize_backend_print_variables.sh
