--- a/.github/workflows/deploy-backend-infratstructure.yml
+++ b/.github/workflows/deploy-backend-infratstructure.yml
@@ -13,4 +13,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Print Variables
+        run: echo "INFO: current working directory: $(pwd)"
+
+      - name: Print Variables
         run: . ./scripts/initialize_backend_print_variables.sh
