--- a/.github/workflows/deploy-backend-infratstructure.yml
+++ b/.github/workflows/deploy-backend-infratstructure.yml
@@ -12,8 +12,8 @@ jobs:
   deploy-backend-infrastructure:
     runs-on: ubuntu-20.04
     steps:
-      - name: Print Variables
-        run: echo "INFO: current working directory: $(pwd)"
-
+      - name: Print Directory
+        run: |
+          echo "INFO: current working directory: $(pwd)"
       - name: Print Variables
         run: . ./scripts/initialize_backend_print_variables.sh
