--- a/.github/workflows/deploy-backend-infratstructure.yml
+++ b/.github/workflows/deploy-backend-infratstructure.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Print Directory
         run: |
-          echo "INFO: current working directory: $(pwd)"
+          echo "INFO: current working directory: $(pwd)" \ 
           echo "INFO: current working directory contents: $(ls)"
       - name: Print Variables
         run: |
