--- a/.github/workflows/deploy-backend-infratstructure.yml
+++ b/.github/workflows/deploy-backend-infratstructure.yml
@@ -12,6 +12,8 @@ jobs:
   deploy-backend-infrastructure:
     runs-on: ubuntu-20.04
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Print Directory
         run: |
           echo "INFO: current working directory: $(pwd)" \ 
