--- a/.github/workflows/deploy-backend-infratstructure.yml
+++ b/.github/workflows/deploy-backend-infratstructure.yml
@@ -10,16 +10,18 @@ env:
   DEVELOPMENT_ENVIRONMENT: ${{ inputs.environment.default || github.ref_name == 'master' && 'dev0' || 'dev1'}}
   CDK_DEFAULT_REGION: ${{ vars.CDK_DEFAULT_REGION }}
   COMPANY: ${{ vars.COMPANY }}
+  DEV_AWS_ACCESS_KEY_ID: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
+  DEV_AWS_SECRET_ACCESS_KEY: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
+  DEV_AWS_SESSION_TOKEN: ${{ secrets.DEV_AWS_SESSION_TOKEN }}
 jobs:
   deploy-backend-infrastructure:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Print Directory
+      - name: Initialize Python Backend
         run: |
-          echo "INFO: current working directory: $(pwd)" \ 
-          echo "INFO: current working directory contents: $(ls)"
-      - name: Print Variables
+          . ./scripts/initialize_backend_environment.sh
+      - name: Print python environment
         run: |
-          . ./scripts/initialize_backend_print_variables.sh
+          echo "INFO: the current working python environment is: $(which python)"
