--- a/.github/workflows/deploy-backend-infratstructure.yml
+++ b/.github/workflows/deploy-backend-infratstructure.yml
@@ -21,7 +21,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Initialize Python Backend
         run: |
-          . ./scripts/initialize_backend_environment.sh
+          ./scripts/initialize_backend_python_environment.sh
+      - name: Install AWS CLI and CDK
+        run: |
+          ./scripts/install_aws_cli.sh
       - name: Print python environment
         run: |
           echo "INFO: the current working python environment is: $(which python)"
