--- a/.github/workflows/deploy-backend-infratstructure.yml
+++ b/.github/workflows/deploy-backend-infratstructure.yml
@@ -21,10 +21,12 @@ jobs:
         uses: actions/checkout@v4
       - name: Initialize Python Backend
         run: |
-          ./scripts/initialize_backend_python_environment.sh
-      - name: Install AWS CLI and CDK
+          ./scripts/initialize_backend_python_environment.sh \
+          echo PATH=$PATH >> $GITHUB_ENV
+      - name: Check AWS CLI and CDK Version
         run: |
-          ./scripts/install_aws_cli.sh
+          echo "INFO: the current aws cli version is: $(aws --version)"
+          echo "INFO: the current aws cdk version is: $(cdk --version)"
       - name: Print python environment
         run: |
           echo "INFO: the current working python environment is: $(which python)"
