--- a/.github/workflows/deploy-backend-infratstructure.yml
+++ b/.github/workflows/deploy-backend-infratstructure.yml
@@ -35,4 +35,4 @@ jobs:
           echo "INFO: the current aws cdk version is: $(cdk --version)"
       - name: Ensure Python and CDK installed
         run: |
-          . ./scripts/setup_aws_environment_variables.sh; cd ./backend/infrastructure; cdk deploy
+          . ./scripts/setup_aws_environment_variables.sh; cd ./backend/infrastructure; cdk deploy —require-approval never
