--- a/.github/workflows/deploy-backend-infratstructure.yml
+++ b/.github/workflows/deploy-backend-infratstructure.yml
@@ -37,4 +37,4 @@ jobs:
           echo "INFO: the current aws cdk version is: $(cdk --version)"
       - name: Deploy Backend Infrastructure
         run: |
-          . ./scripts/setup_aws_environment_variables.sh; cd ./backend/infrastructure; cdk deploy -—require-approval never
+          . ./scripts/setup_aws_environment_variables.sh; cd ./backend/infrastructure; cdk deploy
