--- a/.github/workflows/backend-infratstructure.yml
+++ b/.github/workflows/backend-infratstructure.yml
@@ -26,6 +26,7 @@ env:
   DEV_AWS_SECRET_ACCESS_KEY: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
   DEV_AWS_SESSION_TOKEN: ${{ secrets.DEV_AWS_SESSION_TOKEN }}
   DEV_FACEBOOK_CLIENT_ID: ${{ secrets.DEV_FACEBOOK_CLIENT_ID }}
+  DEV_FACEBOOK_CLIENT_SECRET: ${{ secrets.DEV_FACEBOOK_CLIENT_SECRET }}
 jobs:
   deploy-backend-infrastructure:
     runs-on: ubuntu-20.04
