--- a/.gitignore
+++ b/.gitignore
@@ -154,6 +154,12 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# trust policy
+
+role-trust-policy.json
+role-permissions-policy.json
+create-role.log
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
