--- a/backend/api-lib/pyproject.toml
+++ b/backend/api-lib/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 authors = [
     { name = "Chris Mamon", email = "chrisam1993@gmail.com" }
 ]
-dependencies = []
+dependencies = [
+    "fastapi>=0.111.0",
+]
 readme = "README.md"
 requires-python = ">= 3.8"
 
@@ -15,7 +17,9 @@ build-backend = "hatchling.build"
 
 [tool.rye]
 managed = true
-dev-dependencies = []
+dev-dependencies = [
+    "pytest>=8.2.2",
+]
 
 [tool.hatch.metadata]
 allow-direct-references = true
