--- a/backend/api-lib/pyproject.toml
+++ b/backend/api-lib/pyproject.toml
@@ -7,6 +7,8 @@ authors = [
 ]
 dependencies = [
     "fastapi>=0.111.0",
+    "boto3>=1.34.139",
+    "mypy-boto3[ssm]>=1.34.139",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
