--- a/backend/api-lib/pyproject.toml
+++ b/backend/api-lib/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "boto3>=1.34.139",
     "mypy-boto3>=1.34.139",
     "boto3-stubs[cognito-idp,dynamodb,ssm]>=1.34.139",
+    "requests>=2.32.3",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
