--- a/backend/api-lib/pyproject.toml
+++ b/backend/api-lib/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "mypy-boto3>=1.34.139",
     "boto3-stubs[cognito-idp,dynamodb,ssm]>=1.34.139",
     "requests>=2.32.3",
-    "jose>=1.0.0",
+    "python-jose[cryptography]>=3.3.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
