Feature/migrate oauth2 (#15)
* feature: updated requirements and initialized oauth2 files

* feature: updated infrastructure to use runtime_environment variable over environment variable

* feature: added boto3 and mypy boto3 to requirements

* feature: changed default company name

* feature: added boto3 and boto3 stubs

* feature: changed default company name

* feature: reformatted

* feature: updated development variables in root to match utils

* feature: aded ability to extract ssm parameters

* feature: added requests

* feature: added jose

* feature: updated gitignore

* pyproject.toml

* feature: updated

* feature: added login, revoke and token oauth

--- a/backend/api-lib/.gitignore
+++ b/backend/api-lib/.gitignore
@@ -1,3 +1,6 @@
+.*
+!.gitignore
+
 # python generated files
 __pycache__/
 *.py[oc]
@@ -8,3 +11,6 @@ wheels/
 
 # venv
 .venv
+
+# ssl local keys
+*.pem
