--- a/backend/api-lib/pyproject.toml
+++ b/backend/api-lib/pyproject.toml
@@ -6,7 +6,13 @@ authors = [
     { name = "Chris Mamon", email = "chrisam1993@gmail.com" }
 ]
 dependencies = [
-    "ruff>=0.5.0",
+    "fastapi>=0.111.0",
+    "boto3>=1.34.139",
+    "mypy-boto3>=1.34.139",
+    "boto3-stubs[cognito-idp,dynamodb,ssm]>=1.34.139",
+    "requests>=2.32.3",
+    "python-jose[cryptography]>=3.3.0",
+
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
@@ -17,7 +23,9 @@ build-backend = "hatchling.build"
 
 [tool.rye]
 managed = true
-dev-dependencies = []
+dev-dependencies = [
+    "pytest>=8.2.2",
+]
 
 [tool.hatch.metadata]
 allow-direct-references = true
