--- a/backend/api-lib/.vscode/launch.json
+++ b/backend/api-lib/.vscode/launch.json
@@ -16,6 +16,7 @@
             "type": "debugpy",
             "request": "launch",
             "module": "uvicorn",
+            "justMyCode": true,
             "args": [
                 "api_lib.main:app",
                 "--host",
