--- a/backend/api-lib/pyproject.toml
+++ b/backend/api-lib/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "boto3-stubs[cognito-idp,dynamodb,ssm]>=1.34.139",
     "requests>=2.32.3",
     "python-jose[cryptography]>=3.3.0",
-
+    "itsdangerous>=2.2.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
