feature: added user oauth2 using cookies

--- a/backend/api-lib/.vscode/launch.json
+++ b/backend/api-lib/.vscode/launch.json
@@ -16,7 +16,7 @@
             "type": "debugpy",
             "request": "launch",
             "module": "uvicorn",
-            "justMyCode": true,
+            "justMyCode": false,
             "args": [
                 "api_lib.main:app",
                 "--host",
