--- a/backend/api-lib/pyproject.toml
+++ b/backend/api-lib/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "requests>=2.32.3",
     "python-jose[cryptography]>=3.3.0",
     "itsdangerous>=2.2.0",
+    "stripe>=10.3.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
