--- a/backend/api-lib/pyproject.toml
+++ b/backend/api-lib/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "python-jose[cryptography]>=3.3.0",
     "itsdangerous>=2.2.0",
     "stripe>=10.3.0",
+    "mangum>=0.17.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
