--- a/.github/workflows/backend-infrastructure.yml
+++ b/.github/workflows/backend-infrastructure.yml
@@ -22,6 +22,7 @@ on:
     branches:
       - master
     paths: backend/**/*.py
+run-name: Backend Infrastructure ${{ github.event_name == 'workflow_dispatch' && inputs.mode || 'deploy' }}
 permissions:
   id-token: write
   contents: read
